correction mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
 	margin: 0%;                 /*Mise à zéro marges extérieures*/
     background: url(https://s-media-cache-ak0.pinimg.com/736x/82/a6/6c/82a66c6b69a61564494a682e4fb0d704.jpg) no-repeat center fixed; 
     background-size: cover; /*Couleur de fond de la page*/
-    
 }
 
 h1 {
@@ -22,7 +21,7 @@ h1 {
 /*///////////////////////////////HEADER/////////////////////////////////////////*/
 /*//////////////////////////////////////////////////////////////////////////////*/
 
-img {
+#logo {
 	width: 100%; /*Taille de l'image (largeur)*/
 }
 
@@ -133,28 +132,35 @@ blockquote footer {
 }
 
 #filActu h1{
-	margin-bottom: 70px
+	margin-bottom: 0;
 }
 
-#actu{
-	margin-bottom: -50px;
-	margin-top: 25px;
+#filActu h3{
+	margin: 0;
+	margin-bottom: 2%;
+	font-weight: 600;
 }
 
 #filActu img {
-	width: 25%;
+	width: 50%;
 	padding-top: 0%;
+	margin-bottom: 4%;
 	border-right: 1px solid orange;
 }
 
 .articles {
 	border-bottom: 2px solid #1693a5;
+	padding-top: 5%;
+	font-size: 1.1em;
+}
+
+#dernierArticle{
+	border:none;
 }
 
 .pager {
-	margin-top: -3%;
 	text-align: right;
-	font-size: 0.8em;
+	font-size: 0.7em;
 }
 
 .pager li > a,
@@ -511,7 +517,8 @@ button {
 }
 
 #galerie img {
-    padding: 2%;
+	margin-left:10%;
+    width: 80%;
 }
 
 #galerie video {
@@ -604,7 +611,7 @@ span {                 /*Flèches*/
 	
 /*/////////////////////Navigation//////////////////*/
 	
-	img{
+	#logo{
 		margin-top: -15%;
 	}
 
@@ -797,7 +804,6 @@ span {                 /*Flèches*/
 
  	#galerie{
         box-shadow: none;
-        padding: 0;
     }
 
     #galerie h3{
@@ -805,7 +811,7 @@ span {                 /*Flèches*/
     }
 
     #galerie img{
-    	margin-left: 2%;
+    	margin-left: 8%;
     }
 
     #galerie video {
@@ -834,6 +840,11 @@ span {                 /*Flèches*/
 		width: 70%;
 	}
 
+	#facebookMobileFabrik{
+		display: none;
+	}
+
+
 /*/////////////////////Carroussel photo///////////////*/
 
 	#carroussel{
@@ -850,6 +861,16 @@ span {                 /*Flèches*/
 
 	.formatPaysage{
 		margin-top: 4%;
+	}
+
+	.imageCarousel{
+		width: 100%;
+	}
+
+/*/////////////////////Mentions///////////////*/
+
+	#mention{
+		box-shadow: none;
 	}
 
 }
@@ -927,6 +948,18 @@ span {                 /*Flèches*/
 		margin: 0;
 		margin-top: 0%;
 		width: 40%;
+	}
+
+	.pager{
+		margin-top: 55%;
+	}
+
+	#avantDernierArticle{
+		border:none;
+	}
+
+	#dernierArticle{
+		display: none;
 	}
 
 	#contactFace{
